--- a/src/app/nuova-pratica/nuova-pratica.component.html
+++ b/src/app/nuova-pratica/nuova-pratica.component.html
@@ -1,15 +1,20 @@
+<div class="overlay" *ngIf="loading">
+  <div class="center">
+    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+  </div>
+</div>
 <mat-vertical-stepper [linear]="true" #stepper>
   <mat-step [stepControl]="firstFormGroup">
     <form [formGroup]="firstFormGroup">
       <ng-template matStepLabel>Specificare il tipo di pratica</ng-template>
       <div class="div-radio-group">
-          <mat-label>Selezionare il tipo di pratica:</mat-label>
-          <mat-radio-group formControlName="tipo_pratica" class="vartical-radiobutton">
-              <ng-container *ngFor="let option of options">
-                  <mat-radio-button [value]="option.value">{{option.name}}</mat-radio-button>
-              </ng-container>
-          </mat-radio-group>
-          <mat-error>{{getErrorMessage(firstFormGroup.get('tipo_pratica'))}}</mat-error>
+        <mat-label>Selezionare il tipo di pratica:</mat-label>
+        <mat-radio-group formControlName="tipo_pratica" class="vartical-radiobutton">
+          <ng-container *ngFor="let option of options">
+            <mat-radio-button [value]="option.value">{{option.name}}</mat-radio-button>
+          </ng-container>
+        </mat-radio-group>
+        <mat-error>{{getErrorMessage(firstFormGroup.get('tipo_pratica'))}}</mat-error>
       </div>
       <div>
         <button mat-button matStepperNext>Avanti</button>
@@ -37,9 +42,9 @@
   </mat-step> -->
   <mat-step>
     <ng-template matStepLabel>Riepilogo</ng-template>
-      <p>Confermi i seguenti dati?</p>
-      <p><strong>Tipo pratica: </strong> {{getPratica()}}</p>
-      <!-- <p><strong>Oggetto: </strong> {{secondFormGroup.value.oggetto}}</p>
+    <p>Confermi i seguenti dati?</p>
+    <p><strong>Tipo pratica: </strong> {{getPratica()}}</p>
+    <!-- <p><strong>Oggetto: </strong> {{secondFormGroup.value.oggetto}}</p>
       <p><strong>Descrizione: </strong> {{secondFormGroup.value.descrizione}}</p> -->
     <div>
       <button mat-button matStepperPrevious>Indietro</button>
