--- a/src/app/pratiche/moduli/components-edilizia/expert/expert.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/expert/expert.component.html
@@ -1,3 +1,8 @@
+<div class="overlay" *ngIf="loading">
+    <div class="center">
+        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+    </div>
+</div>
 <ng-container [formGroup]="form">
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Tipologia</mat-label>
@@ -51,20 +56,10 @@
     </mat-form-field>
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Ragione sociale</mat-label>
-        <input matInput type="text" formControlName="name" >
+        <input matInput type="text" formControlName="name">
         <mat-error>{{getErrorMessage(form.get('name'))}}</mat-error>
     </mat-form-field>
     <ng-container formGroupName="address">
-        <mat-form-field class="div-two-thirds" appearance="outline">
-            <mat-label>Indirizzo</mat-label>
-            <input formControlName="street_name" matInput type="text">
-            <mat-error>{{getErrorMessage(form.get('address').get('street_name'))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-a-third" appearance="outline">
-            <mat-label>Cap</mat-label>
-            <input formControlName="postcode" matInput type="number">
-            <mat-error>{{getErrorMessage(form.get('address').get('postcode'))}}</mat-error>
-        </mat-form-field>
         <mat-form-field class="div-half" appearance="outline">
             <mat-label>Provincia</mat-label>
             <mat-select formControlName="county" (selectionChange)="onChangeProvince('address/county', 'address/city')">
@@ -85,11 +80,22 @@
             </mat-select>
             <mat-error>{{getErrorMessage(form.get('address').get('city'))}}</mat-error>
         </mat-form-field>
+        <mat-form-field class="div-two-thirds" appearance="outline">
+            <mat-label>Indirizzo</mat-label>
+            <input formControlName="street_name" matInput type="text">
+            <mat-error>{{getErrorMessage(form.get('address').get('street_name'))}}</mat-error>
+        </mat-form-field>
+        <mat-form-field class="div-a-third" appearance="outline">
+            <mat-label>Cap</mat-label>
+            <input formControlName="postcode" matInput type="number">
+            <mat-error>{{getErrorMessage(form.get('address').get('postcode'))}}</mat-error>
+        </mat-form-field>
     </ng-container>
-    <mat-expansion-panel [disabled]="!formContacts.enabled" formArrayName="contacts" [expanded]="formContacts.enabled && formContacts.controls.length > 0">
+    <mat-expansion-panel [disabled]="!formContacts.enabled" formArrayName="contacts"
+        [expanded]="formContacts.enabled && formContacts.controls.length > 0">
         <mat-expansion-panel-header>
             <mat-panel-title>
-                Contatti 
+                Contatti
             </mat-panel-title>
             <mat-panel-description>
                 Lista contatti
@@ -121,10 +127,13 @@
                 <input formControlName="email" matInput type="email">
                 <mat-error>{{getErrorMessage(formContacts.controls[i].get('email'))}}</mat-error>
             </mat-form-field>
-            <button class="button-delete" mat-mini-fab color="warn" (click)="removeItem(formContacts, i);"><mat-icon>close</mat-icon></button>
+            <button class="button-delete" mat-mini-fab color="warn" (click)="removeItem(formContacts, i);">
+                <mat-icon>close</mat-icon>
+            </button>
         </mat-card>
         <div class="div-full">
-            <button class="button-add" mat-raised-button color="primary" (click)="addContatto(form.get('contacts'));">Aggiungi</button>
+            <button class="button-add" mat-raised-button color="primary"
+                (click)="addContatto(form.get('contacts'));">Aggiungi</button>
         </div>
     </mat-expansion-panel>
     <mat-form-field class="div-half" appearance="outline">
@@ -137,5 +146,5 @@
         <input formControlName="email" matInput type="email">
         <mat-error>{{getErrorMessage(form.get('email'))}}</mat-error>
     </mat-form-field>
-    <mat-error>{{getErrorMessage(form)}}</mat-error>    
+    <mat-error>{{getErrorMessage(form)}}</mat-error>
 </ng-container>
