--- a/src/app/pratiche/moduli/components-edilizia/supplier/supplier.component.html
+++ b/src/app/pratiche/moduli/components-edilizia/supplier/supplier.component.html
@@ -1,15 +1,20 @@
+<div class="overlay" *ngIf="loading">
+    <div class="center">
+        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+    </div>
+</div>
 <mat-expansion-panel [disabled]="!form.enabled" [formGroup]="form" class="referente-group" [expanded]="form.enabled">
     <mat-expansion-panel-header>
         <mat-panel-title>
-          Impresa
+            Impresa
         </mat-panel-title>
         <mat-panel-description>
-          Informazioni dell'impresa adetta ai lavori
+            Informazioni dell'impresa adetta ai lavori
         </mat-panel-description>
     </mat-expansion-panel-header>
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Ragione sociale</mat-label>
-        <input matInput type="text" formControlName="name" >
+        <input matInput type="text" formControlName="name">
         <mat-error>{{getErrorMessage(form.get('name'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-half" appearance="outline">
@@ -18,16 +23,6 @@
         <mat-error>{{getErrorMessage(form.get('vat'))}}</mat-error>
     </mat-form-field>
     <ng-container formGroupName="address">
-        <mat-form-field class="div-two-thirds" appearance="outline">
-            <mat-label>Indirizzo</mat-label>
-            <input formControlName="street_name" matInput type="text">
-            <mat-error>{{getErrorMessage(form.get('address').get('street_name'))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-a-third" appearance="outline">
-            <mat-label>Cap</mat-label>
-            <input formControlName="postcode" matInput type="number">
-            <mat-error>{{getErrorMessage(form.get('address').get('postcode'))}}</mat-error>
-        </mat-form-field>
         <mat-form-field class="div-half" appearance="outline">
             <mat-label>Provincia</mat-label>
             <mat-select formControlName="county" (selectionChange)="onChangeProvince('address/county', 'address/city')">
@@ -48,14 +43,24 @@
             </mat-select>
             <mat-error>{{getErrorMessage(form.get('address').get('city'))}}</mat-error>
         </mat-form-field>
+        <mat-form-field class="div-two-thirds" appearance="outline">
+            <mat-label>Indirizzo</mat-label>
+            <input formControlName="street_name" matInput type="text">
+            <mat-error>{{getErrorMessage(form.get('address').get('street_name'))}}</mat-error>
+        </mat-form-field>
+        <mat-form-field class="div-a-third" appearance="outline">
+            <mat-label>Cap</mat-label>
+            <input formControlName="postcode" matInput type="number">
+            <mat-error>{{getErrorMessage(form.get('address').get('postcode'))}}</mat-error>
+        </mat-form-field>
     </ng-container>
     <mat-expansion-panel formArrayName="contacts" [expanded]="formContacts.controls.length > 0">
         <mat-expansion-panel-header>
             <mat-panel-title>
-              Contatti 
+                Contatti
             </mat-panel-title>
             <mat-panel-description>
-              Lista contatti
+                Lista contatti
             </mat-panel-description>
         </mat-expansion-panel-header>
         <mat-card class="array-list" *ngFor="let contatto of formContacts.controls; let i = index;" [formGroupName]="i">
@@ -84,15 +89,18 @@
                 <input formControlName="email" matInput type="email">
                 <mat-error>{{getErrorMessage(formContacts.controls[i].get('email'))}}</mat-error>
             </mat-form-field>
-            <button class="button-delete" mat-mini-fab color="warn" (click)="removeItem(formContacts, i);"><mat-icon>close</mat-icon></button>
+            <button class="button-delete" mat-mini-fab color="warn" (click)="removeItem(formContacts, i);">
+                <mat-icon>close</mat-icon>
+            </button>
         </mat-card>
         <div class="div-full">
-            <button class="button-add" mat-raised-button color="primary" (click)="addContatto(form.get('contacts'));">Aggiungi</button>
+            <button class="button-add" mat-raised-button color="primary"
+                (click)="addContatto(form.get('contacts'));">Aggiungi</button>
         </div>
     </mat-expansion-panel>
     <mat-form-field class="div-half" appearance="outline">
         <mat-label>Telefono</mat-label>
-        <input formControlName="phone" matInput type="text" >
+        <input formControlName="phone" matInput type="text">
         <mat-error>{{getErrorMessage(form.get('phone'))}}</mat-error>
     </mat-form-field>
     <mat-form-field class="div-half" appearance="outline">
