--- a/src/app/pratiche/moduli/edilizia/edilizia.component.html
+++ b/src/app/pratiche/moduli/edilizia/edilizia.component.html
@@ -1,6 +1,10 @@
-
-    <form [formGroup]="form">
-        <!-- <mat-expansion-panel formGroupName="owner" class="referente-group" expanded>
+<div class="overlay" *ngIf="loading">
+    <div class="center">
+        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+    </div>
+</div>
+<form [formGroup]="form">
+    <!-- <mat-expansion-panel formGroupName="owner" class="referente-group" expanded>
             <mat-expansion-panel-header>
                 <mat-panel-title>
                   Proprietario 
@@ -192,15 +196,9 @@
             <mat-error>{{getErrorMessage(form.get('owner'))}}</mat-error>
             
         </mat-expansion-panel> -->
-        <owner 
-        [form]="form.get('owner')"
-        [tipologie]="tipologie"
-        [generi]="generi"
-        [tipi_documento]="tipi_documento"
-        [tipologie_contatto]="tipologie_contatto"
-        [province]="province"
-        [nazioni]="nazioni"></owner>
-        <!-- <mat-expansion-panel [disabled]="!form.get('expert').enabled" formGroupName="expert" class="referente-group" [expanded]="form.get('expert').enabled">
+    <owner [form]="form.get('owner')" [tipologie]="tipologie" [generi]="generi" [tipi_documento]="tipi_documento"
+        [tipologie_contatto]="tipologie_contatto" [province]="province" [nazioni]="nazioni"></owner>
+    <!-- <mat-expansion-panel [disabled]="!form.get('expert').enabled" formGroupName="expert" class="referente-group" [expanded]="form.get('expert').enabled">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                   Tecnico 
@@ -339,7 +337,7 @@
             </mat-form-field>
             <mat-error>{{getErrorMessage(form.get('expert'))}}</mat-error>
         </mat-expansion-panel> -->
-        <!-- <mat-expansion-panel [disabled]="!form.get('experts').enabled" formArrayName="experts" class="referente-group" [expanded]="form.get('experts').enabled">
+    <!-- <mat-expansion-panel [disabled]="!form.get('experts').enabled" formArrayName="experts" class="referente-group" [expanded]="form.get('experts').enabled">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                   Tecnici 
@@ -495,28 +493,24 @@
                 <button class="button-add" mat-raised-button color="primary" (click)="addExpert(formExperts);">Aggiungi</button>
             </div>
         </mat-expansion-panel> -->
-        <experts 
-        [form]="form.get('experts')"
-        [tipologie]="tipologie"
-        [generi]="generi"
-        [tipologie_contatto]="tipologie_contatto"
-        [titoli_professionali]="titoli_professionali"
-        [province]="province"></experts>
-        <div class="div-checkbox">
-            <mat-checkbox formControlName="delegated">Sottomissione per conto terzi</mat-checkbox>
-            <mat-error>{{getErrorMessage(form.get('delegated'))}}</mat-error>
-        </div>
-        <div class="div-radio-group">
-            <mat-label>In qualità di:</mat-label>
-            <mat-radio-group formControlName="qualification" class="vartical-radiobutton"
+    <experts [form]="form.get('experts')" [tipologie]="tipologie" [generi]="generi"
+        [tipologie_contatto]="tipologie_contatto" [titoli_professionali]="titoli_professionali" [province]="province">
+    </experts>
+    <div class="div-checkbox">
+        <mat-checkbox formControlName="delegated">Sottomissione per conto terzi</mat-checkbox>
+        <mat-error>{{getErrorMessage(form.get('delegated'))}}</mat-error>
+    </div>
+    <div class="div-radio-group">
+        <mat-label>In qualità di:</mat-label>
+        <mat-radio-group formControlName="qualification" class="vartical-radiobutton"
             (change)="changeQualification($event, form.get('business_administrator'))">
-              <ng-container *ngFor="let qualification of qualifiche">
+            <ng-container *ngFor="let qualification of qualifiche">
                 <mat-radio-button [value]="qualification.value">{{qualification.name}}</mat-radio-button>
-              </ng-container>
-            </mat-radio-group>
-            <mat-error>{{getErrorMessage(form.get('qualification'))}}</mat-error>
-        </div>
-        <!-- <mat-expansion-panel [disabled]="!form.get('business_administrator').enabled" formGroupName="business_administrator" class="referente-group" [expanded]="form.get('business_administrator').enabled">
+            </ng-container>
+        </mat-radio-group>
+        <mat-error>{{getErrorMessage(form.get('qualification'))}}</mat-error>
+    </div>
+    <!-- <mat-expansion-panel [disabled]="!form.get('business_administrator').enabled" formGroupName="business_administrator" class="referente-group" [expanded]="form.get('business_administrator').enabled">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                   Amm./Rapp.
@@ -609,23 +603,20 @@
             </mat-form-field>
             <mat-error>{{getErrorMessage(form.get('business_administrator'))}}</mat-error>
         </mat-expansion-panel> -->
-        <administrator 
-        [form]="form.get('business_administrator')"
-        [generi]="generi"
-        [titoli_professionali]="titoli_professionali"
-        [tipologie_contatto]="tipologie_contatto"
-        [province]="province"></administrator>
-        <div class="div-radio-group">
-            <mat-label>Esecuzione dei lavori:</mat-label>
-            <mat-radio-group formControlName="work_supplier" class="vartical-radiobutton"
+    <administrator [form]="form.get('business_administrator')" [generi]="generi"
+        [titoli_professionali]="titoli_professionali" [tipologie_contatto]="tipologie_contatto" [province]="province">
+    </administrator>
+    <div class="div-radio-group">
+        <mat-label>Esecuzione dei lavori:</mat-label>
+        <mat-radio-group formControlName="work_supplier" class="vartical-radiobutton"
             (change)="changeEsecutore($event, form.get('supplier_business'))">
-              <ng-container *ngFor="let esecutore of esecutori">
+            <ng-container *ngFor="let esecutore of esecutori">
                 <mat-radio-button [value]="esecutore.value">{{esecutore.name}}</mat-radio-button>
-              </ng-container>
-            </mat-radio-group>
-            <mat-error>{{getErrorMessage(form.get('work_supplier'))}}</mat-error>
-        </div>
-        <!-- <mat-expansion-panel [disabled]="!form.get('supplier_business').enabled" formGroupName="supplier_business" class="referente-group" [expanded]="form.get('supplier_business').enabled">
+            </ng-container>
+        </mat-radio-group>
+        <mat-error>{{getErrorMessage(form.get('work_supplier'))}}</mat-error>
+    </div>
+    <!-- <mat-expansion-panel [disabled]="!form.get('supplier_business').enabled" formGroupName="supplier_business" class="referente-group" [expanded]="form.get('supplier_business').enabled">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                   Impresa
@@ -729,13 +720,11 @@
             </mat-form-field>
             <mat-error>{{getErrorMessage(form.get('supplier_business'))}}</mat-error>
         </mat-expansion-panel> -->
-        <supplier 
-        [form]="form.get('supplier_business')"
-        [tipologie_contatto]="tipologie_contatto"
-        [province]="province"></supplier>
-        <ng-container detailsPratiche [modulo]="modulo" [form]="form.get('details')"></ng-container>
-        <!-- <rottura-suolo [form]="form.get('details')"></rottura-suolo> -->
-        <!-- <mat-expansion-panel formGroupName="details" expanded>
+    <supplier [form]="form.get('supplier_business')" [tipologie_contatto]="tipologie_contatto" [province]="province">
+    </supplier>
+    <ng-container detailsPratiche [modulo]="modulo" [form]="form.get('details')"></ng-container>
+    <!-- <rottura-suolo [form]="form.get('details')"></rottura-suolo> -->
+    <!-- <mat-expansion-panel formGroupName="details" expanded>
             <mat-expansion-panel-header>
                 <mat-panel-title>
                 Dati pratica
@@ -858,21 +847,25 @@
             </div>
             
         </mat-expansion-panel> -->
-        <mat-card>
-            <mat-card-subtitle>
-                <mat-icon color="warn" style="vertical-align: bottom;">info</mat-icon>
-                E’ necessario conservare la marca da bollo per poi apporla all’eventuale autorizzazione. L’autorizzazione si intendera’ automaticamente revocata nel caso in cui il numero della marca da bollo inserita non corrispondera’ al numero della marca da bolla apposta all’eventuale autorizzazione. La mancata apposizione della marca da bollo rendera’ inefficace l’eventuale autorizzazione.
-            </mat-card-subtitle>
-            <mat-card-content>
-                <mat-form-field class="div-full" appearance="outline">
-                    <mat-label>Marca da bollo</mat-label>
-                    <input formControlName="stamp_number" matInput type="text">
-                    <mat-hint>Inserire il codice della marca da bollo</mat-hint>
-                    <mat-error>{{getErrorMessage(form.get('stamp_number'))}}</mat-error>
-                </mat-form-field>
-            </mat-card-content>
-        </mat-card>
-        <!-- <mat-expansion-panel formGroupName="allegati_pratica" expanded>
+    <mat-card>
+        <mat-card-subtitle>
+            <mat-icon color="warn" style="vertical-align: bottom;">info</mat-icon>
+            E’ necessario conservare la marca da bollo per poi apporla all’eventuale autorizzazione. L’autorizzazione si
+            intendera’ automaticamente revocata nel caso in cui il numero della marca da bollo inserita non
+            corrispondera’ al numero della marca da bolla apposta all’eventuale autorizzazione. La mancata apposizione
+            della marca da bollo rendera’ inefficace l’eventuale autorizzazione.
+        </mat-card-subtitle>
+        <mat-card-content>
+            <mat-form-field class="div-full" appearance="outline">
+                <mat-label>Marca da bollo</mat-label>
+                <input formControlName="stamp_number" matInput type="text">
+                <mat-hint>Inserire il codice della marca da bollo</mat-hint>
+                <mat-error>{{getErrorMessage(form.get('stamp_number'))}}</mat-error>
+            </mat-form-field>
+        </mat-card-content>
+    </mat-card>
+    <documenti [form]="form.get('documenti')" [modulo]="modulo"  [documenti]="documenti"></documenti>
+    <!-- <mat-expansion-panel formGroupName="allegati_pratica" expanded>
             <mat-expansion-panel-header>
                 <mat-panel-title>
                 Allegati pratica
@@ -983,6 +976,12 @@
                 <mat-error>{{getErrorMessage(form.get('allegati_pratica').get('polizza_fidejussoria'))}}</mat-error>
             </mat-card>
         </mat-expansion-panel> -->
-        <!-- <button class="button-login" mat-raised-button color="primary" (click)="save($event)">Salva</button> -->
-        <button class="button-login" mat-raised-button color="primary" (click)="submit()">Convalida</button>
-    </form>
+    <!-- <button class="button-login" mat-raised-button color="primary" (click)="save($event)">Salva</button> -->
+    <button class="button-login" mat-raised-button color="primary" (click)="submit()">Convalida</button>
+</form>
+<mat-error *ngIf="error">{{errormessage}} -- {{errorcode}}</mat-error>
+<mat-error *ngIf="error">
+    <mat-list *ngFor="let error of errors" >
+        <p matLine >{{error}}</p>
+      </mat-list>
+</mat-error>
