nascosto gestione documenti in creazione pratica

--- a/src/app/pratiche/moduli/edilizia/edilizia.component.html
+++ b/src/app/pratiche/moduli/edilizia/edilizia.component.html
@@ -864,7 +864,7 @@
             </mat-form-field>
         </mat-card-content>
     </mat-card>
-    <documenti [form]="form.get('documenti')" [modulo]="modulo"  [documenti]="documenti"></documenti>
+    <!-- <documenti [form]="form.get('documenti')" [modulo]="modulo"  [documenti]="documenti"></documenti> -->
     <!-- <mat-expansion-panel formGroupName="allegati_pratica" expanded>
             <mat-expansion-panel-header>
                 <mat-panel-title>
