--- a/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
+++ b/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
@@ -74,5 +74,13 @@
             (update_details)="submitDetail($event)">
         </view-traslochi-lavori>
     </mat-tab>
-    <mat-tab label="Documenti/allegati">Documenti/allegati</mat-tab>
+    <mat-tab label="Documenti/allegati">
+        <upload-documents
+            [tipologie_file]="tipologie_file"
+            (upload_file)="uploadFile($event)">
+        </upload-documents>
+        <view-documents
+            [documents]="documents_uploaded">
+        </view-documents>
+    </mat-tab>
 </mat-tab-group>
