--- a/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
+++ b/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
@@ -75,7 +75,7 @@
         </view-traslochi-lavori>
     </mat-tab>
     <mat-tab label="Documenti/allegati">
-        <upload-documents
+        <upload-documents *ngIf="can_upload"
             [tipologie_file]="tipologie_file"
             (upload_file)="uploadFile($event)">
         </upload-documents>
