--- a/src/assets/css/form-style.scss
+++ b/src/assets/css/form-style.scss
@@ -3,6 +3,18 @@
     -webkit-box-sizing: border-box; 
      box-sizing: border-box; 
 }
+
+/*css generale */
+
+.margin-top{
+    margin-top: 1em;
+}
+
+.padding-side{
+    padding-left: 4px;
+    padding-right: 4px;
+}
+
 /* css form login, user, registrazione */
 .div-buttons{
     display: flex;
