--- a/src/app/core/components/shared/documents/upload-documents/upload-documents.component.scss
+++ b/src/app/core/components/shared/documents/upload-documents/upload-documents.component.scss
@@ -13,6 +13,7 @@
 
 .upload-label{
     cursor: pointer;
+    margin-bottom: 1em;
     .upload-icon {
         mat-icon{
             vertical-align: middle;
