--- a/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
+++ b/src/app/mie-pratiche/dettagli-pratica/dettagli-pratica.component.html
@@ -83,4 +83,13 @@
             [documents]="documents_uploaded">
         </view-documents>
     </mat-tab>
+    <mat-tab label="Proroghe">
+        <create-extension *ngIf="data_procedure.can_be_extended"
+            [min_date]="data_procedure.details.end_date"
+            (add_extension)="addExtension($event)">
+        </create-extension>
+        <view-extensions
+            [extensions]="extensions">
+        </view-extensions>
+    </mat-tab>
 </mat-tab-group>
