fix lista proroghe

--- a/src/app/core/components/shared/documents/view-documents/view-documents.component.html
+++ b/src/app/core/components/shared/documents/view-documents/view-documents.component.html
@@ -1,10 +1,9 @@
 <section class="margin-top">
     <h2>Lista file caricati:</h2>
     <mat-nav-list class="div-full list-element" *ngIf="documents.length > 0">
-        <p>Documenti caricati:</p>
         <ng-container  *ngFor="let file of documents">
             <mat-list-item >
-                <mat-icon mat-list-icon>description</mat-icon>
+                <mat-icon mat-list-icon>attach_file</mat-icon>
                 <p matLine >Nome: {{ file.name }}</p>
                 <p matLine >Tipo: {{ file.type }}</p>
                 <!-- <button mat-icon-button (click)="removeFile(file.id)">
