--- a/src/app/core/components/shared/extensions/view-extensions/view-extensions.component.html
+++ b/src/app/core/components/shared/extensions/view-extensions/view-extensions.component.html
@@ -1,31 +1,20 @@
 <section class="margin-top">
     <h2>Lista proroghe:</h2>
-    <mat-nav-list class="div-full list-element" *ngIf="extensions.length > 0">
-        <p>Documenti caricati:</p>
+    <mat-list class="div-full list-element" *ngIf="extensions.length > 0">
         <ng-container  *ngFor="let extension of extensions">
             <mat-list-item >
                 <mat-icon mat-list-icon>description</mat-icon>
-                <p matLine >
-                    <mat-grid-list cols="2">
-                        <mat-grid-tile>Stato: <status-procedures [status]="extension.status"></status-procedures></mat-grid-tile>
-                        <mat-grid-tile>Scadenza: {{ extension.expires_on }}</mat-grid-tile>
-                    </mat-grid-list>
+                <p matLine > 
+                    <span class="div-half"><b>Stato: </b><status-procedures [status]="extension.status"></status-procedures></span>
+                    <span class="div-half"><b>Scadenza: </b>{{extension.expires_on | date:'fullDate':'+0100':'it-IT'}}</span> 
                 </p>
-                <p matLine >
-                    <mat-grid-list cols="2">
-                        <mat-grid-tile>Creata il: {{ extension.created_at }}</mat-grid-tile>
-                        <mat-grid-tile>Aggiornata il: {{ extension.updated_at }}</mat-grid-tile>
-                    </mat-grid-list>
+                <p matLine > 
+                    <span class="div-half">Creata il: {{ extension.created_at | date:'shortDate':'+0100':'it-IT' }}</span>
+                    <span class="div-half">Aggiornata il: {{ extension.updated_at | date:'shortDate':'+0100':'it-IT' }}</span>
                 </p>
-                <!-- <p matLine >Scadenza: {{ extension.expires_on }}</p>
-                <p matLine >Creata il: {{ extension.created_at }}</p>
-                <p matLine >Aggiornata il: {{ extension.updated_at }}</p> -->
-                <!-- <button mat-icon-button (click)="removeFile(file.id)">
-                    <mat-icon>cancel</mat-icon>
-                </button> -->
                 <mat-divider></mat-divider>
             </mat-list-item>
         </ng-container>
-    </mat-nav-list>
+    </mat-list>
     <p class="padding-side" *ngIf="extensions.length == 0">Non sono presenti proroghe</p>
 </section>
