modifica ricerca-pratiche, fix mie-pratiche, creazione componente filter condiviso

--- a/src/app/ricerca-pratiche/ricerca-pratiche.component.html
+++ b/src/app/ricerca-pratiche/ricerca-pratiche.component.html
@@ -1,93 +1,61 @@
-<mat-card>
-    <mat-card-title>
-        Ricerca una pratica
-    </mat-card-title>
-    <mat-card-subtitle>
-        Compila i campi per effettuare una ricerca
-    </mat-card-subtitle>
-</mat-card>
-<form [formGroup]="form">
-    <mat-expansion-panel formGroupName="referente" class="referente-group" [expanded]="true">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Referente/Titolare/Professionista
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-form-field class="div-full" appearance="outline">
-            <mat-label>Comune</mat-label>
-            <mat-select formControlName="comune">
-                <mat-option>----</mat-option>
-                <mat-option *ngFor="let comune of comuni" [value]="comune.value">
-                    {{comune.name}}
-                </mat-option>
-            </mat-select>
-            <mat-error>{{getErrorMessage(form.get('referente').get('comune'))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-full" appearance="outline">
-            <mat-label>Titolare</mat-label>
-            <input formControlName="titolare" matInput type="text">
-            <mat-error>{{getErrorMessage(form.get('referente').get('titolare'))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-two-thirds" appearance="outline">
-            <mat-label>Indirizzo</mat-label>
-            <input formControlName="indirizzo" matInput type="text">
-            <mat-error>{{getErrorMessage(form.get('referente').get('indirizzo'))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-a-third" appearance="outline">
-            <mat-label>Civico</mat-label>
-            <input formControlName="civico" matInput type="text">
-            <mat-error>{{getErrorMessage(form.get('referente').get('civico'))}}</mat-error>
-        </mat-form-field>
-        <mat-error>{{getErrorMessage(form.get('referente'))}}</mat-error>
-    </mat-expansion-panel>
-    <mat-expansion-panel formGroupName="dati_pratica" class="pratica-group" [expanded]="true">
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Protocollo
-            </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-form-field class="div-half" appearance="outline">
-            <mat-label>Inizio</mat-label>
-            <input formControlName="inizio" matInput [matDatepicker]="picker_dati_pratica_inizio">
-            <mat-datepicker-toggle matSuffix [for]="picker_dati_pratica_inizio"></mat-datepicker-toggle>
-            <mat-datepicker #picker_dati_pratica_inizio></mat-datepicker>
-            <mat-error>{{getErrorMessage(form.get('dati_pratica').get('inizio'))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-half" appearance="outline">
-            <mat-label>Fine</mat-label>
-            <input formControlName="fine" matInput [matDatepicker]="picker_dati_pratica_fine">
-            <mat-datepicker-toggle matSuffix [for]="picker_dati_pratica_fine"></mat-datepicker-toggle>
-            <mat-datepicker #picker_dati_pratica_fine></mat-datepicker>
-            <mat-error>{{getErrorMessage(form.get('dati_pratica').get('fine'))}}</mat-error>
-        </mat-form-field>
-        <mat-error>{{getErrorMessage(form.get('dati_pratica'))}}</mat-error>
-        <mat-form-field class="div-half" appearance="outline">
-            <mat-label>Da Numero</mat-label>
-            <input formControlName="danumero" matInput type="text">
-            <mat-error>{{getErrorMessage(form.get('dati_pratica').get('danumero'))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-half" appearance="outline">
-            <mat-label>A Numero</mat-label>
-            <input formControlName="anumero" matInput type="text">
-            <mat-error>{{getErrorMessage(form.get('dati_pratica').get('anumero'))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-a-third" appearance="outline">
-            <mat-label>Sezione</mat-label>
-            <input formControlName="sezione_catasto" matInput type="text">
-            <mat-error>{{getErrorMessage(form.get('dati_pratica').get('sezione_catasto'))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-a-third" appearance="outline">
-            <mat-label>Foglio</mat-label>
-            <input formControlName="foglio_catasto" matInput type="text">
-            <mat-error>{{getErrorMessage(form.get('dati_pratica').get('foglio_catasto'))}}</mat-error>
-        </mat-form-field>
-        <mat-form-field class="div-a-third" appearance="outline">
-            <mat-label>Numero</mat-label>
-            <input formControlName="numero_catasto" matInput type="text">
-            <mat-error>{{getErrorMessage(form.get('dati_pratica').get('numero_catasto'))}}</mat-error>
-        </mat-form-field>
-        <mat-error>{{getErrorMessage(form.get('dati_pratica'))}}</mat-error>
-    </mat-expansion-panel>
-    <button class="button-login" mat-raised-button color="primary" (click)="reset()">Reimposta</button>
-    <button class="button-login" mat-raised-button color="primary" (click)="submit()">Ricerca</button>
-</form>
+<div class="loading-shade" *ngIf="isLoadingResults">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+  </div>
+  <filter-procedures
+      (update_filter)="updateFilter($event)">
+    </filter-procedures>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
+      
+      <ng-container matColumnDef="number">
+        <th mat-header-cell *matHeaderCellDef>N. pratica</th>
+        <td mat-cell *matCellDef="let element"> {{element.number}} </td>
+      </ng-container>
+      
+      <ng-container matColumnDef="protocol">
+        <th mat-header-cell *matHeaderCellDef>N. protocollo</th>
+        <td mat-cell *matCellDef="let element"> {{element.protocol}} </td>
+      </ng-container>
+  
+      
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef> Stato </th>
+        <td mat-cell *matCellDef="let element"> <status-procedures [status]="element.status"></status-procedures> </td>
+      </ng-container>
+  
+      
+      <ng-container matColumnDef="category">
+        <th mat-header-cell *matHeaderCellDef> Categoria </th>
+        <td mat-cell *matCellDef="let element"> {{element.category | categoryPipe}} </td>
+      </ng-container>
+  
+      
+      <ng-container matColumnDef="owner">
+        <th mat-header-cell *matHeaderCellDef> Proprietario </th>
+        <td mat-cell *matCellDef="let element"> {{element.owner.name ? element.owner.name : (element.owner.first_name + ' '+ element.owner.last_name) }} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="expert">
+        <th mat-header-cell *matHeaderCellDef> Tecnico </th>
+        <td mat-cell *matCellDef="let element"> {{element | expertPipe}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="all_mandatory_documents_uploaded">
+        <th mat-header-cell *matHeaderCellDef> Documenti </th>
+        <td mat-cell class="documents_uploaded" *matCellDef="let element"><documents-uploaded [doucuments_uploaded]="element.all_mandatory_documents_uploaded"></documents-uploaded></td>
+      </ng-container>
+  
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Azioni </th>
+        <td mat-cell *matCellDef="let element" >
+          <button mat-icon-button matTooltip="Visualizza dettagli" [routerLink]="['dettagli-pratica/', element.id]"><mat-icon>launch</mat-icon> </button>
+        </td>
+      </ng-container> 
+      
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  
+    <mat-paginator [pageIndex]="data?.meta.pagination.current_page - 1" [pageSize]="data?.meta.pagination.per_page" [length]="data?.meta.pagination.total" showFirstLastButtons></mat-paginator>
+  </div>
+  
