--- a/src/app/mie-pratiche/mie-pratiche.component.html
+++ b/src/app/mie-pratiche/mie-pratiche.component.html
@@ -1,7 +1,10 @@
+<div class="loading-shade" *ngIf="isLoadingResults">
+  <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+</div>
+<filter-procedures
+    (update_filter)="updateFilter($event)">
+  </filter-procedures>
 <div class="mat-elevation-z8">
-  <div class="loading-shade" *ngIf="isLoadingResults">
-    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-  </div>
   <table mat-table [dataSource]="dataSource">
     
     <ng-container matColumnDef="number">
