--- a/src/app/ricerca-pratiche/ricerca-pratiche.component.scss
+++ b/src/app/ricerca-pratiche/ricerca-pratiche.component.scss
@@ -1,3 +1,24 @@
 mat-expansion-panel{
     margin-bottom: 1em;
 }
+
+table {
+    width: 100%;
+}
+
+.loading-shade {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.15);
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.documents_uploaded{
+    text-align: center;
+}
