sincronizzato il tecnico nella modifica ed aggiunta

--- a/src/app/core/components/shared/details/view-occupazione-suolo-pubblico/view-occupazione-suolo-pubblico.component.html
+++ b/src/app/core/components/shared/details/view-occupazione-suolo-pubblico/view-occupazione-suolo-pubblico.component.html
@@ -78,15 +78,15 @@
     </mat-form-field>
 </mat-card>
 <div class="div-full">
-    <button *ngIf="!can_modify" class="button-login" mat-raised-button color="primary" (click)="modify()">
+    <button *ngIf="!can_modify && modifiable" class="button-login" mat-raised-button color="primary" (click)="modify()">
         <mat-icon>create</mat-icon>
         Modifica
     </button>
-    <button *ngIf="can_modify" class="button-login" mat-raised-button color="warn" (click)="modify()">
+    <button *ngIf="can_modify && modifiable" class="button-login" mat-raised-button color="warn" (click)="modify()">
         <mat-icon>close</mat-icon>
         Annulla
     </button>
-    <button *ngIf="can_modify" class="button-login" mat-raised-button color="primary" (click)="save()">
+    <button *ngIf="can_modify && modifiable" class="button-login" mat-raised-button color="primary" (click)="save()">
         Salva
     </button>
 </div>
