--- a/src/app/ricerca-pratiche/ricerca-pratiche.component.html
+++ b/src/app/ricerca-pratiche/ricerca-pratiche.component.html
@@ -48,7 +48,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Azioni </th>
         <td mat-cell *matCellDef="let element" >
-          <button mat-icon-button matTooltip="Visualizza dettagli" [routerLink]="['dettagli-pratica/', element.id]"><mat-icon>launch</mat-icon> </button>
+          <button mat-icon-button matTooltip="Visualizza dettagli" [routerLink]="['/dettagli-pratica/', element.id]"><mat-icon>launch</mat-icon> </button>
         </td>
       </ng-container> 
       
