--- a/src/app/core/components/shared/extensions/view-extensions/view-extensions.component.html
+++ b/src/app/core/components/shared/extensions/view-extensions/view-extensions.component.html
@@ -1,3 +1,6 @@
+<div class="loading-shade" *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+</div>
 <create-extension *ngIf="can_extend && !viewSelected"
     [min_date]="procedure.details.end_date"
     (add_extension)="addExtension($event)">
