--- a/src/app/core/components/shared/details/view-occupazione-suolo-pubblico/view-occupazione-suolo-pubblico.component.scss
+++ b/src/app/core/components/shared/details/view-occupazione-suolo-pubblico/view-occupazione-suolo-pubblico.component.scss
@@ -9,3 +9,16 @@ mat-card {
 .checkbox-margin{
     margin: 0 10px;
 }
+
+.loading-shade {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.15);
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
