--- a/src/app/core/components/shared/details/view-traslochi-lavori/view-traslochi-lavori.component.html
+++ b/src/app/core/components/shared/details/view-traslochi-lavori/view-traslochi-lavori.component.html
@@ -1,3 +1,6 @@
+<div class="loading-shade" *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+</div>
 <mat-card [formGroup]="form">
     <mat-form-field class="div-full" appearance="outline">
         <mat-label>Ubicazione</mat-label>
