--- a/src/app/core/components/shared/extensions/view-extension/view-extension.component.html
+++ b/src/app/core/components/shared/extensions/view-extension/view-extension.component.html
@@ -2,9 +2,9 @@
     <div>
         <h2>Proroga: {{ extension.id}}</h2>
         <p class="div-half"><b>Stato: </b> <status-procedures [status]="extension.status"></status-procedures></p>
-        <p class="div-half"><b>Scadenza: </b>{{extension.expires_on | date:'fullDate':'+0100':'it-IT'}}</p>
-        <p class="div-half"><b>Creata il: </b>{{ extension.created_at | date:'shortDate':'+0100':'it-IT' }}</p>
-        <p class="div-half"><b>Aggiornata il: </b>{{ extension.updated_at | date:'shortDate':'+0100':'it-IT' }}</p>
+        <p class="div-half"><b>Scadenza: </b>{{extension.expires_on}}</p>
+        <p class="div-half"><b>Creata il: </b>{{ extension.created_at}}</p>
+        <p class="div-half"><b>Aggiornata il: </b>{{ extension.updated_at}}</p>
     </div>
     <mat-divider *ngIf="can_modify"></mat-divider>
     <upload-documents *ngIf="can_modify"
